# Django_site

./: .env.template  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
mysite/accounts/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/accounts/migrations/: 0001_initial.py  0002_alter_user_date_birth.py  0003_alter_user_about_me.py
mysite/accounts/templates/accounts/: base.html  groups_list.html  login.html  profile.html  profile_edit.html  signup.html  user_edit.html  user_info.html  user_list.html
mysite/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
mysite/blogapp/migrations/: 0001_initial.py
mysite/blogapp/templates/blogapp/: article_detail.html  article_list.html
mysite/locale/en/LC_MESSAGES/: django.po
mysite/locale/ru/LC_MESSAGES/: django.po
mysite/myapiapp/: urls.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
mysite/requestdataapp/templates/requestdataapp/: base.html  file_upload.html  request_query_params.html  user_bio_form.html
mysite/shopapp/: admin.py  admin_mixins.py  common.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
mysite/shopapp/fixtures/: order-fixture.json  product-fixture.json  product-fixture.xml  users-fixture.json
mysite/shopapp/migrations/: 0001_initial.py  0002_alter_order_user.py  0003_alter_product_description_alter_product_name.py
mysite/static/: db.json
mysite/static/css/: accounts.css  base.css  shopapp.css
mysite/static/js/: base.js
(+22 files in other folders)
